[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/characters/Enemys/MeanBoar/MeanBoar.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/ennemys/MeanBoar.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/ennemys/MeanBoarDammage.gd" type="Script" id=3]
[ext_resource path="res://art/UI/Lifebar/behind.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Lifebar/Over.png" type="Texture" id=5]
[ext_resource path="res://art/UI/Lifebar/inFront.png" type="Texture" id=6]
[ext_resource path="res://art/characters/Enemys/MeanBoar/MeanBoarRun1.png" type="Texture" id=7]
[ext_resource path="res://art/characters/Enemys/MeanBoar/MeanBoarRun2.png" type="Texture" id=8]
[ext_resource path="res://art/characters/Enemys/MeanBoar/MeanBoarRun1.5.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.07246, 6.39228 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 9 ) ],
"loop": true,
"name": "RunFast",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 1 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 2.60153 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.89022, 6.05683 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.70197, 4.76978 )

[node name="MeanBoar" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 136
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Dammage" type="Area2D" parent="Body"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Dammage"]
position = Vector2( -8.59661, -6.70725 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="Body"]
position = Vector2( 0, -16 )
frames = SubResource( 5 )
animation = "RunFast"

[node name="Detection" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Detection"]
visible = false
position = Vector2( -64, -6.72901 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0854225, -6.15282 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 1.21156, -2.64748 )
scale = Vector2( 1.69552, 1.26475 )
physics_process_parent = true

[node name="KillDetector" type="Area2D" parent="."]
position = Vector2( 6.87484, -0.537108 )
monitorable = false
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillDetector"]
visible = false
modulate = Color( 0.937255, 0.0470588, 0.964706, 1 )
position = Vector2( -3.04077, -5.19413 )
shape = SubResource( 4 )

[node name="HealthBar" type="TextureProgress" parent="."]
modulate = Color( 1, 0.00392157, 0.00392157, 1 )
margin_left = -12.5302
margin_top = -24.8638
margin_right = 19.4698
margin_bottom = 7.13619
rect_scale = Vector2( 0.75, 0.5 )
max_value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Body/Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Body/Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="KillDetector" to="." method="_on_KillDetector_area_entered"]
